objects/005-api-mysql/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: api
spec:
  ingressClassName: nginx-external
  rules:
  - host: hyukjuntest.site
    http:
      paths:
      - backend:
          service:
            name: api-svc
            port:
              number: 8000
        path: /api/player
        pathType: Prefix
